--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -15,6 +15,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    cursor: pointer;
 }
 .side-icon-buttons:hover{
     background-color: rgb(235, 235, 235);
@@ -50,6 +51,7 @@
     align-items: center;
     justify-content: start;
     padding-left: 24px;
+    cursor: pointer;
 }
 
 .side-icon-buttons:hover{
